# Ianuelle

./: README.md  pyproject.toml
src/: run.py
src/discord_api/: discor_client.py
src/openai_api/: openapi_conector.py
